2021-03-revision-1
- Uses libbib 1.3.1 to do more of the work
- Should fix problems with some LC Call -> Subject translations
- Better discriminating between local call numbers and lc calls
- utils in dependencies now part of libbib
- now writes out gzipped data files instead (for big files and intermediate files)
- writes targets in one place
- adds human-readable language name and place of publication name

2021-03
- adds LC Subject Classification and subclassification directly in data target
- uses libbib (on CRAN) instead of bibcodes.R
- fixed issue with export of LCCNs
- fixed issue with tabs and newlines in CUL MARCXml
- uses LAS transactions up to 2021-04-09
- remove garbage "tmp" variable
- various code/other/output improvements
- updated LICENSE and README

New items since last update (2020-05)
NYPL: 89,612
CUL:  40,774
PUL: 164,642  (issue in 2020-05 regarding open/shared items)

New number of transactions
205,849
