@@ -5,8 +5,14 @@
 rm(list=ls())
 
 options(echo=TRUE)
+options(width=80)
+options(warn=2)
+options(scipen=10)
 options(datatable.prettyprint.char=50)
-options(width = 80)
+options(datatable.print.class=TRUE)
+options(datatable.print.keys=TRUE)
+options(datatable.fwrite.sep='\t')
+options(datatable.na.strings="")
 
 args <- commandArgs(trailingOnly=TRUE)
 
@@ -14,41 +20,45 @@ library(colorout)
 library(data.table)
 library(magrittr)
 library(stringr)
-library(libbib)   # version 1.3.4
+library(libbib)   # >= v1.6.2
+library(assertr)
 
 # ------------------------------ #
 
 
+nypl <- fread_plus_date("../step-1--parse-marc-xml/target/NYPL-RECAP.dat",
+              colClasses="character", quote="", na.strings=c("", "NA", "NIL"),
+              strip.white=FALSE)
+nypl %>% verify(nrow(.) >= 6263710, success_fun=success_report) # 2021-03-26
 
-PARSED_HTC_LOC <- "~/data/scsb-recap-exports/2021-03/parsed/"
-
-nypl <- fread(sprintf("%s/NYPL-RECAP.dat", PARSED_HTC_LOC),
-              colClasses="character", quote="", na.strings=c("", "NA", "NIL"))
-# 2021-03:              6,263,710
 nypl <- nypl[sharedp %chin% c("Shared", "Open"), ]
-# OLD:                  4,838,430
-# 2020-05-26:           4,848,922
-# 2021-03:              4,938,534
+# nypl %>% verify(nrow(.) >= 4848922, success_fun=success_report) # 2021-05-26
+nypl %>% verify(nrow(.) >= 4938534, success_fun=success_report) # 2021-03-26
 
 
-cul <- fread(sprintf("%s/CUL-RECAP.dat", PARSED_HTC_LOC),
-             colClasses="character", quote="", na.strings=c("", "NA", "NIL"))
-# 2021-03:              5,322,058
+
+cul <- fread_plus_date("../step-1--parse-marc-xml/target/CUL-RECAP.dat",
+             colClasses="character", quote="", na.strings=c("", "NA", "NIL"),
+             strip.white=FALSE)
+cul %>% verify(nrow(.) >= 5322058, success_fun=success_report) # 2021-03-26
+
 cul <- cul[sharedp %chin% c("Shared", "Open"), ]
-# OLD:                  4,622,980
-# 2020-05-26:           4,681,369
-# 2021-03:              4,722,143
+# cul %>% verify(nrow(.) >= 4681369, success_fun=success_report) # 2021-05-26
+cul %>% verify(nrow(.) >= 4722143, success_fun=success_report) # 2021-03-26
 
 
-pul <- fread(sprintf("%s/PUL-RECAP.dat", PARSED_HTC_LOC),
-             colClasses="character", quote="", na.strings=c("", "NA", "NIL"))
-# 2021-03:              3,971,988
+
+pul <- fread_plus_date("../step-1--parse-marc-xml/target/PUL-RECAP.dat",
+             colClasses="character", quote="", na.strings=c("", "NA", "NIL"),
+             strip.white=FALSE)
+pul %>% verify(nrow(.) >= 3971988, success_fun=success_report) # 2021-03-26
+
 pul <- pul[sharedp %chin% c("Shared", "Open"), ]
-# OLD:                  3,367,792
-# 2020-05-26:           3,191,778   (?)
-# 2021-03:              3,532,434
+# pul %>% verify(nrow(.) >= 3191778, success_fun=success_report) # 2020-05-26 (?)
+pul %>% verify(nrow(.) >= 3532434, success_fun=success_report) # 2021-03-26
 
 
+expdate <- attr(nypl, "lb.date")
 
 
 nypl[, inst_has_item:="NYPL"]
@@ -62,8 +72,8 @@ setcolorder(pul, c("inst_has_item"))
 recap <-rbindlist(list(nypl, cul, pul))
 
 recap[,.N]
-# old:~     12.8 million
-# 2021-03:  13.2 million
+# old:~         12.8 million
+# 2021-03-26:   13.2 million
 
 rm(nypl)
 rm(cul)
@@ -76,28 +86,34 @@ recap[, pubplace:=get_country_from_code(pubplace_code)]
 
 
 
-##########
+###############
+###############
 ####  LCCN
+###############
 recap[!is.na(lccn), lccn:=normalize_lccn(lccn)]         # 1.2 minutes
 
 
 
-##########
+###############
+###############
 ####  ISBN
+###############
 recap[, original_isbn:=isbn]
 recap[!is.na(original_isbn),
       isbn:=split_map_filter_reduce(original_isbn,
                                     mapfun=function(x){normalize_isbn(x, convert.to.isbn.13=TRUE)},
                                     filterfun=remove_duplicates_and_nas,
                                     reduxfun=recombine_with_sep_closure(),
-                                    cl=9)]
+                                    cl=7)]
 # 6.5 minutes or 17 minutes
 
 
 
 
-##########
+###############
+###############
 ####  ISSN
+###############
 recap[, original_issn:=issn]
 recap[!is.na(original_issn),
       issn:=split_map_filter_reduce(original_issn,
@@ -110,8 +126,10 @@ recap[!is.na(original_issn),
 
 
 
-##############
+#################
+#################
 ####  LC CALLS
+#################
 recap[, original_lccall:=lccall]
 recap[inst_has_item!="NYPL" & !is.na(localcallnum) & is.na(lccall)
       & (!str_detect(localcallnum, ":") | str_detect(localcallnum, "\\s+\\.[A-Z]\\d")) # 12th
@@ -132,6 +150,16 @@ recap[!is.na(lccall),
 
 
 
+################################
+################################
+####  DATES AND OTHER THINGS
+################################
+recap %>% names
+recap[, dateoflastxaction:=as.Date(dateoflastxaction)]
+recap[, pubdate:=as.integer(pubdate)]
+recap[year(Sys.Date()) < pubdate, pubdate:=NA]
+recap[pubdate < 1500, pubdate:=NA]
+
 
 
 neworder <- c("inst_has_item", "barcode", "vol", "numitems", "scsbid",
@@ -143,11 +171,8 @@ neworder <- c("inst_has_item", "barcode", "vol", "numitems", "scsbid",
               "title", "author", "topicalterms", "subject_classification",
               "subject_subclassification")
 
-
 setcolorder(recap, neworder)
 
-recap %>% fwrite("../target/RECAP.dat.gz",
-                 sep="\t", na="NA")
-# 19 seconds
-# 1 GB (down from 5GB uncompressed
+set_lb_date(recap, expdate)
+recap %>% fwrite_plus_date("../target/RECAP.dat.gz")
 
