@@ -5,56 +5,46 @@
 rm(list=ls())
 
 options(echo=TRUE)
+options(width=80)
+options(warn=2)
+options(scipen=10)
 options(datatable.prettyprint.char=50)
-options(width = 80)
+options(datatable.print.class=TRUE)
+options(datatable.print.keys=TRUE)
+options(datatable.fwrite.sep='\t')
+options(datatable.na.strings="")
 
 args <- commandArgs(trailingOnly=TRUE)
 
 library(colorout)
 library(data.table)
 library(magrittr)
-library(stringr)
+library(libbib)   # >= v1.6.2
+library(assertr)
 
 # ------------------------------ #
 
 
+
 # 2.7 minutes
-recap <- fread("../target/RECAP.dat.gz")
+recap <- fread_plus_date("../target/RECAP.dat.gz")
+expdate <- attr(recap, "lb.date")
+
+recap %>% verify(nrow(.) >= 13193111, success_fun=success_report) # 2021-03-26
+
 
 las <- fread("../target/transactions.dat")
 las[, barcode:=toupper(barcode)]
 
+
 setkey(las, "barcode")
-
-
-recap[,.N]
-# 2021-03: 13,193,111
 
 recap[, barcode:=toupper(barcode)]
 setkey(recap, "barcode")
 
 
-# recap[las] -> comb
-# recap[las, mult="first", nomatch=0L] -> comb
 recap[las, mult="first"] -> comb
 
-recap[,.N]
-las[,.N]
-comb[,.N]
-
-
-comb[, .N, !is.na(inst_has_item)]
-## 2021-03
-   #  is.na      N
-   # <lgcl>  <int>
-   # 1:   TRUE 578798
-   # 2:  FALSE 177401
-# 77%
-
-
-comb[is.na(inst_has_item)]
-comb[!is.na(inst_has_item)]
-comb[is.na(inst_has_item), .N]
 
 
 setcolorder(comb, c("barcode", "item_owner", "order_owner", "req_date",
@@ -62,7 +52,6 @@ setcolorder(comb, c("barcode", "item_owner", "order_owner", "req_date",
 
 comb
 
-comb %>% fwrite("../target/las-transaction-bib-info.dat", sep="\t", na="NA")
-
-
+set_lb_date(comb, expdate)
+comb %>% fwrite_plus_date("../target/las-transaction-bib-info.dat")
 
