@@ -1,3 +1,11 @@
+2021-03-revision-2
+- More hands-off dealings with dates of export
+- Uses libbib's `fread/fwrite_plus_date`
+- Step 2 uses assertr to check number of rows
+- Step 3 no longer has to use lubridate
+- Step 3 reads all las data automatically
+- Step 4 uses assertr to check number of rows
+
 2021-03-revision-1
 - Uses libbib 1.3.1 to do more of the work
 - Should fix problems with some LC Call -> Subject translations
